feat(core): Solr ユーザー/グループ検索サービス + パッチ障害伝播修正
- UserGroupSearchService: Solr ベースのユーザー/グループ検索
  - ワンタイムプローブによる Solr フィールド存在確認
  - ユーザー/グループ独立プローブ + READY TTL (300s/3600s)
  - バッチループによる非ページング全件取得 (MAX_QUERY_ROWS=1000)
  - COVERAGE_THRESHOLD=100% で検索欠落を防止
  - CouchDB フォールバック (hydrate gap 検出時)
- Patch_NarrowUserGroupViews: 既存環境向け view ナロー化パッチ
  - userItemsById/groupItemsById に objectType フィルタ追加
  - StandardCmisViews 適用済み環境でも確実に実行
- パッチ障害伝播: client/designDoc/views 欠損時に例外送出
  - StandardCmisViews, NarrowUserGroupViews の早期 return を修正
  - 未適用のまま適用済み履歴が残る問題を解消
- bedroom_init.dump: ナロー view 定義に統一 (3箇所)
- ユニットテスト 53件 + 回帰テスト 99件 全パス

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>